--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,13 +6,24 @@
   display: none;
 }
 
-.bg-conic-gradient {
-  background: linear-gradient(
-    90deg,
-    #44ff9a -0.55%,
-    #44b0ff 22.86%,
-    #8b44ff 48.36%,
-    #ff6644 73.33%,
-    #ebff70 99.34%
-  );
+@layer utilities {
+  .bg-conic-gradient {
+    background: linear-gradient(
+      90deg,
+      #44ff9a -0.55%,
+      #44b0ff 22.86%,
+      #8b44ff 48.36%,
+      #ff6644 73.33%,
+      #ebff70 99.34%
+    );
+  }
+  .text-gradient {
+    background: linear-gradient(
+      to right bottom,
+      hsl(179, 84%, 5%) 50%,
+      rgba(255, 255, 255, 20%)
+    );
+    background-clip: text;
+    color: transparent;
+  }
 }
