--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,6 +17,17 @@
       #ebff70 99.34%
     );
   }
+  .intro-img-blur-bg {
+    background: conic-gradient(
+      from 180deg at 50% 50%,
+      #0aefff -69.37deg,
+      #0f83ff 31.88deg,
+      #b056e7 120deg,
+      #ff9966 204.37deg,
+      #0aefff 290.63deg,
+      #0f83ff 391.87deg
+    );
+  }
   .text-gradient {
     background: linear-gradient(
       to right bottom,
