setup-tailwind-with-react-native-expo

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,9 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
+/* * {
   cursor: none !important;
-}
+} */
 
 ::-webkit-scrollbar {
   display: none;
